# cargo-features = ["profile-rustflags"]

[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
signal-hook = "0.3.17"
clap = "4.5.21"
libc = "0.2.164"
rand = "0.9.0-alpha.2"
num_cpus = "1.16.0"
portable-atomic = "1.10.0"
time = "0.3.37"
sysinfo = "0.27"
sys-info = "0.9"

[profile.dev]
debug = true
# rustflags = ["-Zsanitizer=address"]


